# ConversorUnidades

./: CMakeLists.txt  README.md  conversor.c  conversor.h  convunit.c  dadossalvos.c  funcaocategoria.c  funçãocategoria.c  main.c  multunid.c  salvarconv.c  temperatura.c  unid.h  unidade.h  unidades.c  utilidades.c  utilidades.h  validarentrada.c  verifstring.c
